@@ -1,5 +1,7 @@
 AUX bashrc 416 SHA256 265fe4f8ce8362ce905c174c4030498763e9d3de1448ec5b5c301d7082ed51be SHA512 8a32847265a91deabc9e132c0650f57901de5bf5de7cc6f66eb52fc16b9c3c5b72a3307328b5199110b4aa54de1e3f1936b7ff3563dcaaa6e3d4d470d15c3e50 WHIRLPOOL a73d42a23571f4ee11fe748ff17ffda93959d94520041fca8d82802255d6d4d1eafdf743aa8f7c5b1474b3efba9f5b20373b793390e5e7c926f41d91a0c8b910
 DIST gentoo-sources-image-4.19.84.tar.xz 55786412 SHA256 686c38e13be9aed7c50fe8169d0cf1b2ba82e77e553363ff87a0175fff03da16 SHA512 bf11b0c914a619e2933defd61abaa733469cb1ef6700581d8c334f3440406cf363159f13b5f54dcd4c20d00b01eae5673e6b3670889c1949c328f3f642324422 WHIRLPOOL f5ad44c69066b99a6e92136a4f8173214c59897dc134794ab113ecf511c5d2ef472855b5979329e4abe8b15e4eacc15d748a0097d6b8c9070c4ba638323076f0
+DIST gentoo-sources-image-4.19.85.tar.xz 55762460 SHA256 e24bb965d2536bb9ceb4f0cb853cc24876cc23cc447ca6a8a4e158e204c50ece SHA512 3c27f4909fa1e74ea101244d17907fc7eab4df97a376a67c369987860c23700313a32d43c91744f95fcd710d2766110a1dbbe8152632b68b9e5ed7817f573a88 WHIRLPOOL fc451ecccea72fb483308a74fc57e3406f8eb2779f6d2f4a8c3585b9e715d43fe204ad2c1a26c339fa8437f8aa551ad94c8356d2fb240f87d4926535cf5dbda6
 EBUILD gentoo-sources-image-4.19.84.ebuild 1172 SHA256 d45c148031d23dca8ab72e9db6386557c528d05b2aa592c88d04d259e425206c SHA512 b8f1ad84cee25b62a904149a643fe62d1459a07aa06bf1a02500e2eae067abe4252232f484d393e195ca667202d1b5bbb93db6fd2458719ca18d01d65acb2363 WHIRLPOOL 73e6711fcfc030eea5630a1be3cb985b92677ead850c6689ab993df1477bbf4c0bd666a68450d96789ddba1ca2d433830df46157439bac2dc7ebb1245582fb0e
-MISC ChangeLog 560 SHA256 8c18724e7e3ab690147dbc228009b3a252b805f02ec408a7e45ab044b1fa7b86 SHA512 ee3b1b9cfbe862756b7c3c67fadca9a469862036dc89c8bcc3376e5cda439dca65061ebccafedc6ae6d0b82ef29e944250134e49fc496f2ff5fde43262a678d2 WHIRLPOOL 388c614ed316a5ad2a5a6713bd4468ac5428831b42b98d83b32950c4edbd0308aa2a380d74fbfc839bdd7e0a7e2f969661b031209d33431b8395add09a023dcc
+EBUILD gentoo-sources-image-4.19.85.ebuild 1169 SHA256 25ea1315eefa1383f201d9f04fb28c60bcef2ce8b2fd2d1d63a1878d19b13591 SHA512 15c848c87272cc92648b32231f7382b21277d47d7348e6133e4bd355e4be886a68fbf74060b3a81147922ffd822e3a596496bd7620468c71b6bdafaf20d08590 WHIRLPOOL 52b52e84464ddb6612a4217b82a1703a25130139fcf9daa4bbd8a8c18bc832b47d0017a4965d2c6fcb9eaa871cf402620d882e0118b207e092b32226617382a6
+MISC ChangeLog 754 SHA256 4908284bb8e68b94f68d3227636caea882796956d949dd49d621ad0bdeca125c SHA512 09f57d735d71e69a88e9225b3a05067fcb829b099c38be1bdc8dd98b64105c19f0316468d10052a9957fa6f3202a9389696c98b74185d7e0bc774da584c543b7 WHIRLPOOL 7a5f18ad0d043465f4afcbbe32b27cef26e650ea7db83f526f7d13f4b1e011ef50d8b85cf20d984f271f33dee40a3127bc24ee6ba182d4ac351c010902d336a4
 MISC metadata.xml 252 SHA256 0df10ba8b53ce829ea0fdf3b8f808ae371f24235ab02a7f94967fe0c2d7845bf SHA512 1f9486ce3b84ae866622da9d6e26a3e873467fe1607826fca6b0cc2f6091b0c8f94c4cff6717c57419867ac74bd371c0ef8f035ffb1ffcb1c4cbfae86f544ab5 WHIRLPOOL f993df191d6ce02786a5a2234510fbae80c9e1e1661c2a89cfe71be92cf5668fda737e28faedb21765de32526df074b3ef4eef6f5110020aa8232b1cb85aa7dc
