@@ -1,3 +1,9 @@
+*gentoo-sources-image-4.19.85 (22 Nov 2019)
+
+  22 Nov 2019; Agostino Sarubbo <ago@gentoo.org>
+  +gentoo-sources-image-4.19.85.ebuild:
+  sys-kernel/gentoo-sources-image: version bump to 4.19.85
+
   21 Nov 2019; Agostino Sarubbo <ago@gentoo.org>
   gentoo-sources-image-4.19.84.ebuild:
   sys-kernel/gentoo-sources-image: Add note, remove the genkernel word
